--- a/src/apps/avatar-generator/Settings/Settings.styles.less
+++ b/src/apps/avatar-generator/Settings/Settings.styles.less
@@ -13,10 +13,20 @@
 }
 .label {
   color: @oc-gray-6;
-  margin-right: 15px;
+  margin-right: 15px; 
 }
-.label a {
-  cursor:pointer
+.labelprev
+{
+  color: @oc-gray-6;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.label h4 {
+  cursor:pointer;
+  margin-left: 15px;
+}
+.label svg {
+  cursor:pointer;
 }
 .active {
   color: @oc-violet-9;
@@ -24,18 +34,29 @@
 }
 .scroll
 {
-  height: 450px;
+  height: 350px;
   overflow-y: auto;
   overflow-x: hidden;
+  list-style: none;
+  padding:10px
 }
 .scroll li{
   padding:10px 0px;
+  display: flex;
+  align-items: center;
+}
+.pd15
+{
+  padding:15px
 }
 .dark {
   .control {
     color: @oc-gray-3;
   }
-
+  .labelprev
+  {
+    color: @oc-gray-5;
+  }
   .active {
     color: @oc-gray-2;
   }
@@ -45,4 +66,5 @@
   & + & {
     margin-left: 30px;
   }
+  
 }
