--- a/src/apps/icons-collection/IconCollection.styles.less
+++ b/src/apps/icons-collection/IconCollection.styles.less
@@ -3,6 +3,11 @@
     padding: 15px;
     position: relative;
   }
+  .tabswrap {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+  } 
   .mt20{
     margin-top:20px
   }
