--- a/src/apps/gradient-generator/GradientCode/GradientCode.styles.less
+++ b/src/apps/gradient-generator/GradientCode/GradientCode.styles.less
@@ -1,6 +1,10 @@
 .gradientCode {
   margin: 10px;
   padding: 15px;
+  @media (max-width: 575px) {
+      padding: 0;
+      margin: 0;
+    }
 }
 
 .section {
