--- a/src/components/Navbar/Navbar.styles.less
+++ b/src/components/Navbar/Navbar.styles.less
@@ -55,6 +55,9 @@
   position: absolute;
   z-index: 1;
   transition: transform 200ms ease;
+  @media (max-width: 1024px) {
+      width: calc(100% - 40px);
+    }
 }
 
 .link {
