--- a/src/components/SliderInput/Slider.styles.less
+++ b/src/components/SliderInput/Slider.styles.less
@@ -35,6 +35,9 @@
 
 .dark {
   background-color: @oc-gray-7;
+  @media (max-width: 375px) {
+      max-width: 90px;
+    }
 
   .active {
     background-color: @oc-blue-8 !important;
