--- a/src/components/SliderInput/SliderInput.styles.less
+++ b/src/components/SliderInput/SliderInput.styles.less
@@ -1,6 +1,9 @@
 .wrapper {
   display: flex;
   align-items: center;
+  @media (max-width: 425px) {
+      flex-wrap: wrap;
+    }
 }
 
 .input {
@@ -9,4 +12,8 @@
   padding-right: 5px;
   margin-right: 15px;
   text-align: center;
+    @media (max-width: 425px) {
+        margin-bottom: 15px;
+        margin-top: 10px;
+      }
 }
