--- a/src/apps/avatar-generator/Settings/Settings.styles.less
+++ b/src/apps/avatar-generator/Settings/Settings.styles.less
@@ -10,6 +10,9 @@
 .body {
   display: flex;
   margin-top: 30px;
+  @media (max-width: 1080px) {
+      display: block;
+    }
 }
 .label {
   color: @oc-gray-6;
@@ -65,6 +68,9 @@
 .column {
   & + & {
     margin-left: 30px;
+    @media (max-width: 1080px) {
+        margin-left: 0;
+      }
   }
   
 }
