--- a/src/apps/gradient-generator/GradientGenerator.styles.less
+++ b/src/apps/gradient-generator/GradientGenerator.styles.less
@@ -1,6 +1,10 @@
 .controls {
   margin: 10px;
   padding: 15px;
+  @media (max-width: 375px) {
+      margin: 0;
+      padding: 5px;
+    }
 }
 
 .preview {
@@ -10,10 +14,24 @@
 .body {
   display: flex;
   margin-top: 30px;
+  @media (max-width: 1024px) {
+      display: block;
+      margin-left: 0;
+    }
 }
 
 .column {
   & + & {
     margin-left: 30px;
+    @media (max-width: 1024px) {
+        margin-left: 0;
+        padding-top: 20px;
+    
+        @media (min-width: 475px) {
+          margin-left: 0;
+          padding-top: 10px;
+        }
+      }
   }
 }
+
