--- a/src/apps/gradient-generator/GradientsGallery/GradientGalleryItem/GradientGalleryItem.styles.less
+++ b/src/apps/gradient-generator/GradientsGallery/GradientGalleryItem/GradientGalleryItem.styles.less
@@ -6,10 +6,19 @@
   margin-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
+  @media (max-width: 320px) {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      height: 140px;
+      width: 140px;
+    }
 }
 
 .item {
   padding: 15px;
+  @media (max-width: 320px) {
+      padding: 0px;
+    }
 }
 
 .header {
