--- a/src/components/HexInput/HexInput.styles.less
+++ b/src/components/HexInput/HexInput.styles.less
@@ -21,7 +21,10 @@
   border-left: 0;
   border-radius: 0 5px 5px 0;
   background-color: @oc-white;
-
+  @media (max-width: 375px) {
+      padding-right: 0;
+      max-width: 120px;
+    }
   &:focus {
     outline: 0;
     border-color: @oc-violet-5;
@@ -58,7 +61,10 @@
     background-color: @oc-gray-7;
     color: @oc-gray-2;
     border-color: @oc-gray-8;
-
+    @media (max-width: 375px) {
+        padding-right: 0;
+        max-width: 95px;
+      }
     &:focus {
       border-color: @oc-blue-8;
     }
