--- a/src/apps/gradient-generator/GradientsGallery/GradientsGallery.styles.less
+++ b/src/apps/gradient-generator/GradientsGallery/GradientsGallery.styles.less
@@ -14,9 +14,13 @@
   display: flex;
   flex-wrap: wrap;
   margin: 5px;
+  @media (max-width: 768px) {
+      justify-content: space-evenly;
+    }
 }
 
 .item {
   margin: 5px;
   flex: 0 0 calc(33.3333% - 10px);
+
 }
