--- a/src/apps/triangle-generator/Code/Code.styles.less
+++ b/src/apps/triangle-generator/Code/Code.styles.less
@@ -6,6 +6,9 @@
   color: @oc-gray-6;
   font-size: 14px;
   margin-bottom: 5px;
+  @media (max-width: 425px) {
+      margin-bottom: 25px;
+    }
 }
 
 .section {
