--- a/src/components/SliderInput/Slider.styles.less
+++ b/src/components/SliderInput/Slider.styles.less
@@ -5,6 +5,9 @@
   border-radius: 5px;
   user-select: none;
   height: 10px;
+  @media (max-width:425px) {
+      max-width: 150px;
+    }
 }
 
 .active {
