--- a/src/components/Highlight/Highlight.styles.less
+++ b/src/components/Highlight/Highlight.styles.less
@@ -39,6 +39,10 @@
   border-radius: 0 !important;
   border-top-right-radius: 14px !important;
   border-bottom-left-radius: 5px !important;
+  @media (max-width: 375px) {
+      top: -20px;
+      font-size: 12px;
+    }
 }
 
 .dark {
