--- a/src/components/Tabs/Tabs.styles.less
+++ b/src/components/Tabs/Tabs.styles.less
@@ -2,6 +2,9 @@
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+  @media (max-width: 425px) {
+      max-width: 150px;
+    }
 }
 
 .control {
